--- a/style.css
+++ b/style.css
@@ -688,7 +688,8 @@ button.b1:hover {
     color: rgb(99, 115, 129);
 }
 .processs{
-    display: flex;
+  display: flex;
+   flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
@@ -704,6 +705,7 @@ button.b1:hover {
     align-items: center;
 }
 button.b2{
+
   background-color: yellowgreen;
   color: honeydew;
   border: none;
@@ -714,6 +716,9 @@ button.b2{
   align-self: center;
   margin-top: 5px;
   margin-bottom: 500px;
+  flex-wrap: wrap;
+  flex-wrap: calc(10px);
+
 }
 button.b2:hover {
   background-color: skyblue;
@@ -995,8 +1000,8 @@ button.b3:hover {
   background: linear-gradient(rgb(77, 177, 201), rgb(33, 158, 188));
 }
 .wu9 {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
 }
 .wu10 {
@@ -1010,6 +1015,132 @@ button.b3:hover {
   flex-direction: row;
 }
 /* why us end */
+.whyus1{
+  width: 100%;
+  height: 600px;
+  /* background-color:red ; */
+  padding-left: 120px;
+  display: flex;
+  position: relative
+}
+
+.whyus1 h5{
+  
+  font-weight: 800;
+  font-size: 1.3rem;
+  line-height: 2;
+}
+.whyus1 p{
+  
+  font-weight: 200;
+  font-size: 1rem;
+  line-height: 1.5;
+  color:#929ca7;
+}
+
+
+#two{
+  width: 400px;
+  height: 90px;
+  /* background-color: rgb(0, 140, 255); */
+  margin-bottom: 80px;
+  position: relative;
+}
+#three{
+  width: 400px;
+  height: 90px;
+  /* background-color: yellow; */
+  
+  position: relative;
+
+}
+#one{
+  width: 400px;
+  height: 90px;
+  /* background-color: rgb(0, 255, 119); */
+  margin-bottom: 80px;
+  position: relative;
+}
+#one1{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: rgb(0, 255, 64);
+  left:75%;
+  top: 3%;
+  border-radius: 50px;
+}
+
+#one2{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: #eaff00;
+  left:65%;
+  top: 3%;
+  border-radius: 50px;
+}
+#rightwhyus{
+width: 400px;
+height: 500px;
+position: relative;
+/* background-color: rgb(139, 114, 250); */
+}
+#imagewhyus{
+width: 430px;
+height: 500px;
+/* background-color: #000; */
+padding-left: 75px;
+padding-top: 70px;
+
+}
+
+#leftwhyus{
+  width: 400px;
+height: 500px;
+/* background-color: rgb(139, 114, 250); */
+}
+
+#four{
+  width: 400px;
+  height: 90px;
+  /* background-color: rgb(0, 255, 119); */
+  margin-bottom: 80px;
+  position: relative;
+  padding-left: 40px;
+}
+
+#five{
+  width: 350px;
+  height: 90px;
+  /* background-color: rgb(0, 255, 119); */
+  margin-bottom: 80px;
+  position: relative;
+  padding-left: 40px;
+  margin-left: 30px;
+}
+#six{
+  width: 400px;
+  height: 90px;
+  /* background-color: rgb(0, 255, 119); */
+  margin-bottom: 80px;
+  position: relative;
+  padding-left: 40px;
+}
+
+#one3{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: rgb(255, 157, 0);
+  left:0%;
+  top: 3%;
+  border-radius: 50px;
+}
+
+
+
+
 
 /* trip of the month */
 .trip-of-the-month{
@@ -1019,6 +1150,7 @@ button.b3:hover {
   justify-content: center;  
   align-items: center;
   margin-bottom: 40px;
+
 }
 
 .tripimg{
@@ -1133,13 +1265,13 @@ button.b5:hover {
 }
 /* contact end */
 
-/* mobil responsive */
+
 @media (max-width: 767px) {
   .work-flow {
     margin-top: 200px;
     height: 500px; 
   }
-.processs {
+.process {
     margin-top: 40px;
       flex-direction: column; 
       width: 50%;
@@ -1152,5 +1284,60 @@ button.b5:hover {
 button.b2 {
       margin-top: 450px; 
   }
+  .whyus{
+    width: 100%;
+    height: 1800px;
+    position: relative;
+    margin-bottom: 30px;
+    
+  }
+  .whyus .center-container{
+    width: 500px;
+    height: 1500px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+   
+    
+  }
+  .whyus .image-section{
+    display: none;
+  }
+  .whyus .center-container .left-section,
+.whyus .center-container .right-section {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+
 }
-/* end m */
+.whyus .center-container .right-section {
+ position: absolute;
+ top:400px;
+ padding-left: 13px;
+}
+.whyus .center-container .right-section .wu10,
+.whyus .center-container .right-section .wu11,
+
+.whyus .center-container .right-section .wu3,
+.whyus .center-container .right-section .wu4 {
+  display: flex;
+  justify-content: start;
+}
+#contactus{
+  height: 1400px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+#contactus #contactcontent{
+position: absolute;
+right: 0%;
+left: 5px;
+width: 100%;
+  }
+#contactus #map{
+  position: absolute;
+  top: 40%;
+  right: 0%;
+}
+}
